fix border red on firefox fix content li can scroll

--- a/src/login.scss
+++ b/src/login.scss
@@ -70,6 +70,7 @@
         >label{
           position: absolute;
           top: 36px;
+          left: 0;
           letter-spacing: 50px;
           font-size: 1.3em;
           color: #009DCD;
