--- a/src/todolist.scss
+++ b/src/todolist.scss
@@ -85,7 +85,7 @@
         border-radius: 2px;
         background-color: rgba(256,256,256,.5);
         transition: .5s;
-        overflow: auto;
+        overflow: hidden;
         &.completed {
           span{
             color: #ccc;
@@ -135,12 +135,12 @@
           margin: 0 10px;
           width: 30px;
           height: 30px;
-          transform: translateY(20%);
+          transform: translateY(18%);
           border: 1px solid;
           border-radius: 50%;
           >.icon-tick{
             display: none;
-            transform: translate(20%, -10%);
+            transform: translate(25%, -12%);
             color: #009ED0;
           }
         }
